<resources>
    <string name="app_name">Guia de Estudos</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="idiomas">Línguas e Idiomas</string>
    <string name="welcome_main">Guia de Estudos!</string>
    <string name="button_text_informatica_basica">Informática Básica</string>
    <string name="catalog_main">Catálogo de Sites</string>
    <string name="fgv_text">Fundação Getúlio Vargas</string>
    <string name="english_text">Inglês</string>
    <string name="espanhol_text">Espanhol</string>
    <string name="idiomas_textview">Nestes cursos você pode ter alguma dificuldade de achar a turma certa. \nPara isso, entre no curso desejado e procure pela turma referente ao ano em que você se encontra (por exemplo, Inglês 2024). \n Após isso entre na turma que está disponível de acordo com o período do ano que estamos (por exemplo, primeiro semestre). \nBoa sorte!</string>
    <string name="programa_o_b_sica">Programação Básica</string>
    <string name="pacote_office">Pacote Office</string>
    <string name="ia">Inteligências\nArtificiais</string>
    <string name="chatgpt">IA de texto e conversa</string>
    <string name="basic_tech_txt">Trilha de cursos da Fundação Bradesco para dar os primeiros passos para o TI.</string>
    <string name="basic_programming_txt">Trilha de conhecimentos da Fundação Bradesco sobre Python</string>
    <string name="basic_office_txt">Pacote de cursos do Microsoft Office da Fundação Bradesco</string>
    <string name="ia_de_programa_o">IA de programação</string>
    <string name="ia_de_cria_o_musical">IA de criação musical</string>
    <string name="assistente_google">Assistente Google</string>
    <string name="ia_de_cortar_v_deos">IA de cortar vídeos</string>
    <string name="sobre">Sobre</string>
    <string name="administrativo">Administração</string>
    <string name="administra_o_b_sica">Administração Básica</string>
    <string name="aprimoramento_profissional">Aprimoramento Profissional</string>
    <string name="comunica_o_oral_e_escrita">Comunicação Oral e Escrita</string>
    <string name="finan_as_b_sicas">Finanças Básicas</string>
    <string name="ciee">CIEE</string>
    <string name="sebrae">SEBRAE</string>
    <string name="empreendedorismo">Empreendedorismo</string>
    <string name="marketing_digital_b_sico">Marketing Digital Básico</string>
    <string name="fundamentos_b_sicos_para_cria_o_de_neg_cios">Fundamentos Básicos para Criação de Negócios</string>
    <string name="skills_para_liderar">Skills para Liderar</string>
    <string name="comunica_o_empresarial">Comunicação Empresarial</string>
    <string name="instituto_federal_rio_grande_do_sul">Instituto Federal Rio Grande do Sul</string>
    <string name="woman_in_business">woman_in_business</string>
    <string name="catalogo_image">catalogo_image</string>
    <string name="empreendedorismo_image">Empreendedorismo_Image</string>
    <string name="inteligencia_artificial_image">inteligencia_artificial_image</string>
    <string name="linguas_e_idiomas_image">linguas_e_idiomas_image</string>
    <string name="computer_image">computer_image</string>
    <string name="sobre_image">sobre_image</string>
    <string name="administra_o">Administração</string>
    <string name="funda_o_bradesco">Fundação Bradesco</string>
    <string name="minist_rio_da_educa_o">Ministério da Educação</string>
    <string name="intelig_ncias_artificiais">Inteligências Artificiais</string>
    <string name="l_nguas_e_idiomas">Línguas e Idiomas</string>
    <string name="termos_de_uso_privacidade_content">Política de Privacidade\n\nEsta política de privacidade se aplica ao aplicativo Guia de Estudos (doravante referido como "Aplicativo") para dispositivos móveis, que foi criado por Henrique Schwarz Souza Farisco (doravante referido como "Prestador de Serviços") como um serviço gratuito. Este serviço destina–se a ser utilizado "NO ESTADO EM QUE SE ENCONTRA".\n\nColeta e Uso de Informações\n\nO Aplicativo coleta informações quando você o baixa e o utiliza. Essas informações podem incluir:\n\n– O endereço de Protocolo de Internet (por exemplo, endereço IP) do seu dispositivo\n– As páginas do Aplicativo que você visita, o horário e a data de sua visita, o tempo gasto nessas páginas\n– O tempo gasto no Aplicativo\n– O sistema operacional que você utiliza em seu dispositivo móvel\n\nO Aplicativo não coleta informações precisas sobre a localização do seu dispositivo móvel.\n\nO Prestador de Serviços pode usar as informações que você forneceu para contatá–lo de tempos em tempos para fornecer informações importantes, avisos necessários e promoções de marketing.\n\nPara uma melhor experiência ao usar o Aplicativo, o Prestador de Serviços pode solicitar que você forneça determinadas informações de identificação pessoal. As informações solicitadas pelo Prestador de Serviços serão retidas por eles e usadas conforme descrito nesta política de privacidade.\n\nAcesso de Terceiros\n\nSomente dados agregados e anonimizados são periodicamente transmitidos a serviços externos para auxiliar o Prestador de Serviços na melhoria do Aplicativo e de seu serviço. O Prestador de Serviços pode compartilhar suas informações com terceiros conforme descrito nesta declaração de privacidade.\n\nPor favor, note que o Aplicativo utiliza serviços de terceiros que têm sua própria Política de Privacidade sobre o tratamento de dados. Abaixo estão os links para a Política de Privacidade dos provedores de serviços de terceiros usados pelo Aplicativo:\n\n– Google Play Services\n– Google Analytics para Firebase\n– Firebase Crashlytics\n\nO Prestador de Serviços pode divulgar Informações Fornecidas pelo Usuário e Coletadas Automaticamente:\n\n– quando exigido por lei, como para cumprir uma intimação ou processo legal semelhante;\n– quando acreditar de boa fé que a divulgação é necessária para proteger seus direitos, proteger sua segurança ou a segurança de outros, investigar fraudes ou responder a uma solicitação do governo;\n– com seus provedores de serviços confiáveis que trabalham em seu nome, não têm uso independente das informações que lhes divulgamos e concordaram em aderir às regras estabelecidas nesta declaração de privacidade.\n\nDireitos de Cancelamento de Assinatura\n\nVocê pode interromper toda a coleta de informações pelo Aplicativo facilmente desinstalando–o. Você pode usar os processos de desinstalação padrão disponíveis como parte de seu dispositivo móvel ou através do mercado de aplicativos móveis ou rede.\n\nPolítica de Retenção de Dados\n\nO Prestador de Serviços reterá os dados fornecidos pelo usuário enquanto você utilizar o Aplicativo e por um tempo razoável posteriormente. Se você deseja que eles excluam os Dados Fornecidos pelo Usuário que você forneceu através do Aplicativo, entre em contato com eles em contato.schwarz@gmail.com e eles responderão em um tempo razoável.\n\nCrianças\n\nO Prestador de Serviços não utiliza o Aplicativo para solicitar dados de forma consciente ou para comercializar para crianças menores de 13 anos.\n\nO Prestador de Serviços não coleta conscientemente informações de identificação pessoal de crianças menores de 13 anos. No caso de o Prestador de Serviços descobrir que uma criança menor de 13 anos forneceu informações pessoais, o Prestador de Serviços excluirá imediatamente essas informações de seus servidores. Se você é pai ou responsável e está ciente de que seu filho nos forneceu informações pessoais, entre em contato com o Prestador de Serviços (contato.schwarz@gmail.com) para que eles possam tomar as medidas necessárias.\n\nSegurança\n\nO Prestador de Serviços está preocupado com a proteção da confidencialidade de suas informações. O Prestador de Serviços oferece salvaguardas físicas, eletrônicas e processuais para proteger as informações que processa e mantém.\n\nAlterações\n\nEsta Política de Privacidade pode ser atualizada de tempos em tempos por qualquer motivo. O Prestador de Serviços o notificará de quaisquer alterações na Política de Privacidade atualizando esta página com a nova Política de Privacidade. É recomendável que você consulte regularmente esta Política de Privacidade para verificar quaisquer alterações, pois o uso contínuo é considerado aprovação de todas as alterações.\n\nEsta política de privacidade é eficaz a partir de 30–03–2024.\n\nSeu Consentimento\n\nAo usar o Aplicativo, você está consentindo com o processamento de suas informações conforme estabelecido nesta Política de Privacidade, agora e conforme emendado por nós.\n\nContate-nos\n\nSe você tiver alguma dúvida sobre privacidade ao usar o Aplicativo, ou tiver dúvidas sobre as práticas, entre em contato com o Prestador de Serviços por e-mail em contato.schwarz@gmail.com.\n\nEsta página de política de privacidade foi gerada pelo Gerador de Política de Privacidade do Aplicativo.</string>
    <string name="aceitar_termos_de_uso">Aceitar Termos de Uso</string>
    <string name="ia_de_treinar_entrevistas_em_ingl_s">IA de treinar entrevistas em inglês</string>
</resources>