<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_app_main"
    tools:context=".IAActivity"
    android:topRightRadius="40dp"
    android:topLeftRadius="40dp"
    android:bottomRightRadius="40dp"
    android:bottomLeftRadius="40dp">

    <TextView
        android:id="@+id/ia_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/intelig_ncias_artificiais"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/artificial_intelligence_button"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_text"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:topRightRadius="40dp"
        android:topLeftRadius="40dp"
        android:bottomRightRadius="40dp"
        android:bottomLeftRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_container_buttons"
            android:orientation="vertical"
            android:padding="20dp"
            android:topRightRadius="40dp"
            android:topLeftRadius="40dp"
            android:bottomRightRadius="40dp"
            android:bottomLeftRadius="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/gpt_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_investimentos"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/chatgpt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/blackbox_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_musicas"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/ia_de_programa_o"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sunoai_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_noticias"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/ia_de_cria_o_musical"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/geminiai_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_videos"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/assistente_google"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/opus_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_investimentos"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/ia_de_cortar_v_deos"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/interviewer_button"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cor_musicas"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                android:textSize="18sp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="22sp"
                    android:text="@string/ia_de_treinar_entrevistas_em_ingl_s"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
